# docker-rust-ci-base

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
