[package]
name = "docker-rust-ci-base"
version = "0.3.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix-web = "2.0"
actix-web-opentelemetry = "0.4"
aes-gcm = "0.6"
base64 = "0.12"
bincode = "1.3"
blake3 = "0.3"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
fnv = "1.0"
futures = "0.3"
hex-serde = "0.1"
once_cell = "1.4"
opentelemetry = "0.8"
opentelemetry-application-insights = "0.3.0"
opentelemetry-jaeger = "0.7"
parking_lot = "0.11"
rocks-tables = { git = "https://github.com/danylaporte/rocks-tables.git" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["sync"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.6"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4", "serde"] }

[package.metadata.release]
no-dev-version = true
