[package]
name = "docker-rust-ci-base"
version = "0.9.1"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-rt = "1.1"
actix-web = "3.2"
actix-web-opentelemetry = "0.7"
aes-gcm = "0.8"
bincode = "1.3"
blake3 = "0.3"
bson = "1.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
fnv = "1.0"
hex-serde = "0.1"
indexmap = { version = "1.6", features = ["rayon"] }
mongodb = "1.1"
once_cell = "1.4"
opentelemetry = "0.8"
opentelemetry-application-insights = "0.4"
opentelemetry-jaeger = "0.7"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "0.2", features = ["sync"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.7"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4", "serde"] }

[package.metadata.release]
no-dev-version = true
